--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,18 @@
 [package]
-name = "axum-hello-world"
-version = "0.1.0"
-edition = "2021"
+name = "axum-san"
+version = "0.2.0"
+edition = "2024"
 publish = false
 
+[profile.release]
+lto = true
+strip = true
+debug = false
+codegen-units = 1
+opt-level = "s"
+
+
 [dependencies]
-axum = { version = "0.7" }
-tokio = { version = "1.0", features = ["full"] }
+axum = { version = "~0.8" }
+tokio = { version = "^1", features = ["full"] }
+
